# Tokamak

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/: design.md  satellite-plan.md
rust/: Cargo.toml
rust/tokamak/: Cargo.toml
rust/tokamak-engine/: Cargo.toml  README.md
rust/tokamak-engine/src/: lib.rs
rust/tokamak/src/: anonymize.rs  card.rs  classify.rs  dedup.rs  export.rs  extract.rs  lib.rs  llm.rs  main.rs  pipeline.rs  processor.rs  prompts.rs  quality.rs  terse.rs  validator.rs
skill/: README.md  SKILL.md  install.sh
skill/examples/: sample_trace.jsonl
skill/prompts/: compress_full.md  compress_lite.md  invert.md  validate.md
src/tokamak/: __init__.py  __main__.py  anonymize.py  card.py  caveman.py  classify.py  cli.py  dedup.py  export.py  extract.py  llm_client.py  pipeline.py  processor.py  prompts.py  quality.py  validator.py
tests/: test_caveman_batch.py  test_caveman_rules.py  test_extract.py  test_pipeline.py  test_pipeline_signal.py  test_processor.py  test_validator.py
