[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokamak"
version = "0.1.0"
description = "Caveman-compressed reasoning trace curator for token-efficient SFT datasets."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "thekozugroup"}]
dependencies = []

[project.optional-dependencies]
llm = ["anthropic>=0.40.0"]
dedup = ["scikit-learn>=1.3"]
semantic = ["sentence-transformers>=2.2", "numpy>=1.24"]
hub = ["huggingface_hub>=0.20"]
all = [
  "anthropic>=0.40.0",
  "scikit-learn>=1.3",
  "sentence-transformers>=2.2",
  "numpy>=1.24",
  "huggingface_hub>=0.20",
]

[project.scripts]
tokamak = "tokamak.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
