[package]
name        = "tokamak-engine"
version     = "0.2.0"
edition     = "2021"
description = "Memory-safe concurrent orchestrator for Tokamak's row-scoped reasoning agents"
license     = "MIT"
repository  = "https://github.com/thekozugroup/Tokamak"

[lib]
name       = "tokamak_engine"
# `cdylib` builds the Python extension; `rlib` keeps the crate usable from
# integration tests written in Rust.
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3      = { version = "0.22", features = ["extension-module", "abi3-py310"] }
tokio     = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest   = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow    = "1"
tracing   = "0.1"

[profile.release]
lto        = "fat"
codegen-units = 1
strip      = "symbols"
opt-level  = 3
