[package]
name        = "tokamak-engine"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
description = "Memory-safe concurrent orchestrator for Tokamak — PyO3 module exposing batch_chat to the legacy Python pipeline."

[lib]
name       = "tokamak_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3       = { version = "0.22", features = ["extension-module", "abi3-py310"] }
tokio      = { workspace = true }
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
